PROJECT ( Shepoo )
CMAKE_MINIMUM_REQUIRED ( VERSION 2.8.11 )

SET ( VERSION_MAJOR 0 )
SET ( VERSION_MINOR 1 )

SET ( BLOCKSIZE 4096 CACHE STRING "Block size" )

LIST ( APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake" )

FIND_PACKAGE ( Git REQUIRED )
INCLUDE ( GetGitRevisionDescription )
GET_GIT_HEAD_REVISION ( GIT_REFSPEC GIT_HASH )

SET ( VERSION "${VERSION_MAJOR}.${VERSION_MINOR}-${GIT_HASH}git" CACHE STRING "Version number" )

ADD_DEFINITIONS ( -DVERSION="\\\"${VERSION}\\\"" -DVERSION_MAJOR=${VERSION_MAJOR} -DVERSION_MINOR=${VERSION_MINOR} -DBLOCK_SIZE=${BLOCKSIZE} )

FIND_PACKAGE ( OpenSSL REQUIRED )
FIND_LIBRARY ( RESOLV_LIBRARY resolv )
IF ( NOT ( "${RESOLV_LIBRARY}" STREQUAL "RESOLV_LIBRARY-NOTFOUND" ) )
    SET ( RESOLV_LIBRARIES ${RESOLV_LIBRARY} )
ENDIF ()
MARK_AS_ADVANCED ( RESOLV_LIBRARY )

FILE ( GLOB shepoo_SOURCES src/*.cpp )
FILE ( GLOB shepoo_HEADERS include/*.h )

INCLUDE_DIRECTORIES ( include/ )
INCLUDE_DIRECTORIES ( ${OPENSSL_INCLUDE_DIR} )

ADD_EXECUTABLE ( shepoo ${shepoo_SOURCES} ${shepoo_HEADERS} )
TARGET_LINK_LIBRARIES ( shepoo ${OPENSSL_LIBRARIES} ${RESOLV_LIBRARIES} )

