PROJECT ( Shepoo )
CMAKE_MINIMUM_REQUIRED ( VERSION 2.8.11 )

SET ( VERSION_MAJOR 0 )
SET ( VERSION_MINOR 1 )

SET ( BLOCKSIZE 4096 CACHE STRING "Block size" )

LIST ( APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake" )

INCLUDE ( GetGitRevisionDescription )
GET_GIT_HEAD_REVISION ( GIT_REFSPEC GIT_HASH )

IF ( "${GIT_HASH}" STREQUAL "GITDIR-NOTFOUND" )
    SET ( VERSION_SUFFIX "" )
ELSE ()
    SET ( VERSION_SUFFIX "-${GIT_HASH}git" )
ENDIF ()
SET ( VERSION "${VERSION_MAJOR}.${VERSION_MINOR}${VERSION_SUFFIX}" CACHE STRING "Version number" )

ADD_DEFINITIONS ( -DVERSION="\\\"${VERSION}\\\"" -DVERSION_MAJOR=${VERSION_MAJOR} -DVERSION_MINOR=${VERSION_MINOR} -DBLOCK_SIZE=${BLOCKSIZE} )

FIND_PACKAGE ( OpenSSL REQUIRED )
FIND_LIBRARY ( RESOLV_LIBRARY resolv )
IF ( NOT ( "${RESOLV_LIBRARY}" STREQUAL "RESOLV_LIBRARY-NOTFOUND" ) )
    MESSAGE ( STATUS "Resolv lib found: ${RESOLV_LIBRARY}" )
    SET ( RESOLV_LIBRARIES ${RESOLV_LIBRARY} )
ENDIF ()
MARK_AS_ADVANCED ( RESOLV_LIBRARY )

FILE ( GLOB shepoo_SOURCES src/*.cpp )
FILE ( GLOB shepoo_HEADERS include/*.h )

INCLUDE_DIRECTORIES ( include/ )
INCLUDE_DIRECTORIES ( ${OPENSSL_INCLUDE_DIR} )

ADD_EXECUTABLE ( shepoo ${shepoo_SOURCES} ${shepoo_HEADERS} )
TARGET_LINK_LIBRARIES ( shepoo ${OPENSSL_LIBRARIES} ${RESOLV_LIBRARIES} )

